--- a/TEST/WebContent/UI/register.html
+++ b/TEST/WebContent/UI/register.html
@@ -1,5 +1,5 @@
 <div class="bjui-pageContent">
-    <form action="../../json/ajaxDone.json" data-toggle="validate" method="post" data-close-current="true">
+    <form action="register.action" data-toggle="validate" method="post" data-close-current="true">
         <div class="bjui-row col-1">
             <label class="row-label">姓名:</label>
             <div class="row-input required">
