--- a/TEST/WebContent/UI/JSP/menu/menu.html
+++ b/TEST/WebContent/UI/JSP/menu/menu.html
@@ -51,7 +51,7 @@ function datagrid_tree_beforeDrop(data, targetData, position) {
         dropOptions: {
             drop: true,
             position: 'before',
-            dropUrl: '../../json/ajaxDone.json',
+            dropUrl: 'deleteMenu.action',
             beforeDrag: datagrid_tree_beforeDrag,
             beforeDrop: datagrid_tree_beforeDrop,
             afterDrop: 'array'
@@ -60,7 +60,7 @@ function datagrid_tree_beforeDrop(data, targetData, position) {
         <thead>
             <tr>
                 <th data-options="{name:'name', align:'center', width:300, rule:'required'}">菜单名</th>
-                <th data-options="{name:'target', align:'center', width:300}">target</th>
+                <th data-options="{name:'target', align:'center', width:100}">target</th>
                 <th data-options="{name:'url', align:'center', width:300}">链接</th>
                 <th data-options="{render:datagrid_tree_operation}">操作列</th>
             </tr>
