--- a/TEST/WebContent/UI/JSP/menu/menu.html
+++ b/TEST/WebContent/UI/JSP/menu/menu.html
@@ -61,9 +61,10 @@ function datagrid_tree_beforeDrop(data, targetData, position) {
     }">
         <thead>
             <tr>
-                <th data-options="{name:'name', align:'center', width:300, rule:'required'}">菜单名</th>
-                <th data-options="{name:'target', align:'center', width:100}">target</th>
-                <th data-options="{name:'url', align:'center', width:300}">链接</th>
+                <th data-options="{name:'name', align:'left', width:300, rule:'required'}">菜单名</th>
+                <th data-options="{name:'pageid', align:'left', width:200}">pageid</th>
+                <th data-options="{name:'target', align:'left', width:100}">target</th>
+                <th data-options="{name:'url', align:'left', width:300}">链接</th>
                 <th data-options="{render:datagrid_tree_operation}">操作列</th>
             </tr>
         </thead>
