用户管理模块

--- a/TEST/WebContent/UI/JSP/menu/user.html
+++ b/TEST/WebContent/UI/JSP/menu/user.html
@@ -39,8 +39,8 @@
 				<th data-options="{name:'name'}">姓名</th>
 				<th data-options="{name:'sex'}">性別</th>
 				<th data-options="{name:'age'}">年齡</th>
-				<th data-options="{name:'type' type:'select',items:'管理員，普通用戶'}">角色</th>
-                <th data-options="{name:'date',align:'center',type:'date',pattern:'yyyy-MM-dd HH:mm',render:function(value){return value?value.substr(0,16):value}}">註冊日期</th>
+				<th data-options="{name:'type'}">角色</th>
+                <th data-options="{name:'date',align:'center',type:'date',pattern:'yyyy-MM-dd HH:mm:ss',render:function(value){return value?value.substr(0,16):value}}">註冊日期</th>
             </tr>
         </thead>
     </table>
