--- a/TEST/WebContent/UI/JSP/menu/user-edit.html
+++ b/TEST/WebContent/UI/JSP/menu/user-edit.html
@@ -1,6 +1,6 @@
 <div class="bjui-pageContent">
     <div class="bs-example" >
-        <form action="http://b-jui.com/demo/save?callback=?" class="user-edit-form" data-toggle="validate" data-data-type="jsonp">
+        <form action="modUser.action?callback=?" class="user-edit-form" data-toggle="validate" data-data-type="jsonp">
             <div class="bjui-row col-2">
                 <label class="row-label">姓名</label>
                 <div class="row-input required">
