--- a/TEST/WebContent/UI/JSP/menu/user.html
+++ b/TEST/WebContent/UI/JSP/menu/user.html
@@ -39,7 +39,7 @@
 				<th data-options="{name:'name',width:60,align:'center'}">姓名</th>
 				<th data-options="{name:'sex',width:60,align:'center',type:'select',items:[{'男':'男'},{'女':'女'}] }">性別</th>
 				<th data-options="{name:'age',width:60,align:'center'}">年龄</th>
-				<th data-options="{name:'type',width:80,align:'center'}">角色</th>
+				<th data-options="{name:'type',width:80,align:'center',type:'select',items:[{'普通用户':'普通用户'},{'管理员':'管理员'}]}">角色</th>
                 <th data-options="{name:'date',align:'center',width:200,type:'date',pattern:'yyyy-MM-dd HH:mm:ss',render:function(value){return value?value.substr(0,19):value}}">注册日期</th>
             </tr>
         </thead>
