--- a/TEST/WebContent/UI/register.html
+++ b/TEST/WebContent/UI/register.html
@@ -10,8 +10,9 @@
                 <input type="text" id="j_userinfo_age" name="age" value="" >
             </div>
             <label class="row-label">性别:</label>
-            <div class="row-input">
-                <input type="text" id="j_userinfo_sex" name="sex" value="" >
+            <div class="row-input required">
+                <input type="radio" name="sex" id="j_user_edit_sex_nan" data-toggle="icheck" value="男" data-rule="checked" data-label="男&nbsp;&nbsp;" checked>
+                <input type="radio" name="sex" id="j_user_edit_sex_nv" data-toggle="icheck" value="女" data-label="女">
             </div>
             <label class="row-label">密码:</label>
             <div class="row-input required">
