--- a/TEST/WebContent/UI/JSP/menu/user-edit.html
+++ b/TEST/WebContent/UI/JSP/menu/user-edit.html
@@ -1,35 +1,47 @@
 <div class="bjui-pageContent">
-    <div class="bs-example" >
-        <form action="modUser.action?callback=?" class="user-edit-form" data-toggle="validate" data-data-type="jsonp">
+    <div class="bs-example">
+        <form action="http://b-jui.com/demo/save?callback=?" class="datagrid-edit-form" data-toggle="validate" data-data-type="jsonp">
             <div class="bjui-row col-2">
                 <label class="row-label">姓名</label>
                 <div class="row-input required">
-                    <input type="text" name="name" value="" data-rule="required">
+                    <input type="text" name="obj.name" value="B-JUI" data-rule="required">
                 </div>
                 <label class="row-label">性别</label>
                 <div class="row-input required">
-                    <input type="radio" name="sex" data-toggle="icheck" value="男" data-rule="checked" data-label="男&nbsp;&nbsp;" checked>
-                    <input type="radio" name="sex" data-toggle="icheck" value="女" data-label="女">
+                    <input type="radio" name="obj.sex" id="j_datagrid_edit_sex1" data-toggle="icheck" value="true" data-rule="checked" data-label="男&nbsp;&nbsp;" checked>
+                    <input type="radio" name="obj.sex" id="j_datagrid_edit_sex2" data-toggle="icheck" value="false" data-label="女">
                 </div>
                 <label class="row-label">年龄</label>
                 <div class="row-input required">
-                    <input type="text" name="age" value="" data-rule="required">
+                    <input type="text" name="obj.age" value="3" data-rule="required">
                 </div>
-                <label class="row-label">用户类别</label>
+                <label class="row-label">挂号日期</label>
+                <div class="row-input">
+                    <input type="text" name="obj.regdate" data-toggle="datepicker" data-pattern="yyyy-MM-dd HH:mm:ss" value="2016-11-01 10:01:01">
+                </div>
+                <label class="row-label">挂号类别</label>
                 <div class="row-input required">
-                    <select name="type" data-toggle="selectpicker" data-rule="required" data-width="100%">
+                    <select name="obj.regname" data-toggle="selectpicker" data-rule="required" data-width="100%">
                         <option value=""></option>
-                        <option value="普通用户" selected>普通用户</option>
-                        <option value="管理">管理员</option>
+                        <option value="普通号" selected>普通号</option>
+                        <option value="专家号(主任医师）">专家号(主任医师）</option>
+                        <option value="专家号（知名专家）">专家号（知名专家）</option>
+                        <option value="免费号">免费号</option>
                     </select>
                 </div>
-                <label class="row-label">密码</label>
+                <label class="row-label">科室</label>
                 <div class="row-input required">
-                    <input type="text" name="password" value="" id="j_user_edit_password" data-rule="密码:required;length(6~)">
+                    <select name="obj.deptcode" data-toggle="selectpicker" data-rule="required" data-width="100%">
+                        <option value=""></option>
+                        <option value="1007" selected>儿科</option>
+                        <option value="1019">外一科</option>
+                        <option value="1031">内科</option>
+                        <option value="1005">皮肤科</option>
+                    </select>
                 </div>
-                <label class="row-label">确认密码</label>
+                <label class="row-label">挂号费</label>
                 <div class="row-input required">
-                    <input type="text" name="rpassword" value="" data-rule="required;match(#j_user_edit_password)">
+                    <input type="text" name="obj.regfee" value="5.00" data-rule="required;number">
                 </div>
             </div>
         </form>
