用户增删改查

--- a/TEST/WebContent/UI/JSP/menu/user.html
+++ b/TEST/WebContent/UI/JSP/menu/user.html
@@ -25,8 +25,9 @@
         toolbarItem: 'add,edit,del,|,import,export,exportf',
         dataUrl: 'getUser.action',
         dataType: 'jsonp',
-        editMode: {dialog:{width:'800',height:265,title:'编辑用户信息',mask:true}},
-        editUrl: 'JSP/menu/user-edit.html?id={id}&name={name}&sex={sex}&age={age}&type={type}&date={date}&password={password}',
+        editMode: {dialog:{width:'800',height:270,title:'编辑用户信息',mask:true}},
+        delUrl:'deleteUser.action',
+        editUrl: 'JSP/menu/user-edit.jsp?id={id}&name={name}&sex={sex}&age={age}&type={type}&date={date}&password={password}',
         paging: {pageSize:60},
         showCheckboxcol: true,
         linenumberAll: true,
