新增-用户导出功能

--- a/TEST/WebContent/UI/JSP/menu/menu.html
+++ b/TEST/WebContent/UI/JSP/menu/menu.html
@@ -44,6 +44,7 @@ function datagrid_tree_beforeDrop(data, targetData, position) {
         columnMenu: false,
         contextMenuB: true,
         filterThead: false,
+        hScrollbar: true,
         paging: false,
         treeOptions: {
             expandAll: false,
