--- a/TEST/WebContent/UI/JSP/menu/menu.html
+++ b/TEST/WebContent/UI/JSP/menu/menu.html
@@ -26,7 +26,7 @@ function datagrid_tree_beforeDrop(data, targetData, position) {
 
 </script>
 <div class="bjui-pageContent">
-    <table id="j_datagrid_tree" data-toggle="datagrid" data-options="{
+    <table id="m_datagrid_tree" data-toggle="datagrid" data-options="{
         width: '100%',
         height: '100%',
         gridTitle: '菜单管理',
