--- a/TEST/WebContent/UI/JSP/user/user.html
+++ b/TEST/WebContent/UI/JSP/user/user.html
@@ -27,22 +27,23 @@
         dataType: 'jsonp',
         editMode: {dialog:{width:'800',height:270,title:'编辑用户信息',mask:true}},
         delUrl:'deleteUser.action',
-        editUrl: 'JSP/menu/user-edit.jsp?id={id}&name={name}&sex={sex}&age={age}&type={type}&date={date}&password={password}',
+        editUrl: 'JSP/user/user-edit.jsp?id={id}&name={name}&sex={sex}&age={age}&type={type}&date={date}&password={password}',
         paging: {pageSize:60},
         showCheckboxcol: true,
         linenumberAll: true,
+        contextMenuB: true,
         hScrollbar: true,
-        importOption: {type:'dialog', options:{url:'JSP/menu/user-import.html', width:500, height:300, title:'导入用户信息'}},
+        importOption: {type:'dialog', options:{url:'JSP/user/user-import.html', width:500, height:300, title:'导入用户信息'}},
         exportOption: {type:'file', options:{url:'exportUserExcel.action', loadingmask:false}}
     }">
         <thead>
             <tr>
-            	<th data-options="{name:'id',width:350,align:'center'}" >编号</th>
+            	<th data-options="{name:'id',width:350,align:'center',hide:'true'}" >编号</th>
 				<th data-options="{name:'name',width:150,align:'center'}">姓名</th>
 				<th data-options="{name:'sex',width:60,align:'center',type:'select',items:[{'男':'男'},{'女':'女'}] }">性別</th>
 				<th data-options="{name:'age',width:60,align:'center'}">年龄</th>
 				<th data-options="{name:'type',width:80,align:'center',type:'select',items:[{'普通用户':'普通用户'},{'管理员':'管理员'}]}">角色</th>
-				<th data-options="{name:'password',width:150,align:'center'}">密码</th>
+				<th data-options="{name:'password',width:150,align:'center',hide:'true'}">密码</th>
                 <th data-options="{name:'date',align:'center',width:200,type:'date',pattern:'yyyy-MM-dd HH:mm:ss',render:function(value){return value?value.substr(0,19):value}}">注册日期</th>
             </tr>
         </thead>
