--- a/TEST/WebContent/UI/JSP/role/role.html
+++ b/TEST/WebContent/UI/JSP/role/role.html
@@ -14,8 +14,9 @@
     }">
         <thead>
             <tr>
-                <th data-options="{name:'id',align:'center',hide:'true'}">编号</th>
+                <th data-options="{name:'level',align:'center',hide:'true'}"></th>
                 <th data-options="{name:'name',align:'center',width:200}">名称</th>
+                <th data-options="{name:'description',align:'left',width:400}">描述</th>
             </tr>
         </thead>
     </table>
