--- a/TEST/WebContent/UI/JSP/user/user.html
+++ b/TEST/WebContent/UI/JSP/user/user.html
@@ -1,16 +1,23 @@
 <script type="text/javascript">
 
+
 function datagrid_tree_department() {
+
 	BJUI.ajax('doajax', {
 	    url: 'getAllRole.action',
-	    loadingmask: false,
+	    loadingmask: false, 
 	    okCallback: function(json) {
-	    	var s=json;
-	    	return eval('(' + json + ')'); 
+	    	var tArray = new Array();
+	    	var len=json.length;
+	    	for(var k=0;k<len;k++){    //一维长度为i,i为变量，可以根据实际情况改变  
+	    		tArray[json[k].name]=json[k].name;	
+	    	} 	
+	    	return tArray
 	    }
 	})
-  
+	
 }
+
 
 
 
@@ -37,7 +44,7 @@ function datagrid_tree_department() {
     </fieldset>
 </form>
 </div>
-<div class="bjui-pageContent">
+<div class="bjui-pageContent" id="div-user">
     <table class="table table-bordered" id="datagrid-user-filter" data-toggle="datagrid" data-options="{
         height: '100%',
         gridTitle : '用户管理',
@@ -45,7 +52,7 @@ function datagrid_tree_department() {
         toolbarItem: 'add,edit,del,|,import,export',
         dataUrl: 'getUser.action',
         dataType: 'jsonp',
-        editMode: {dialog:{width:'800',height:270,title:'编辑用户信息',mask:true}},
+        editMode: {dialog:{width:'800',height:280,title:'编辑用户信息',mask:true}},
         delUrl:'deleteUser.action',
         editUrl: 'JSP/user/user-edit.jsp?id={id}&name={name}&sex={sex}&age={age}&type={type}&date={date}&password={password}',
         paging: {pageSize:60, pageCurrent:1},
@@ -62,7 +69,7 @@ function datagrid_tree_department() {
 				<th data-options="{name:'name',width:150,align:'center'}">姓名</th>
 				<th data-options="{name:'sex',width:60,align:'center',type:'select',items:[{'男':'男'},{'女':'女'}] }">性別</th>
 				<th data-options="{name:'age',width:60,align:'center'}">年龄</th>
-				<th data-options="{name:'type',width:80,align:'center',type:'select',items:[{'管理员':'管理员'},{'普通用户':'普通用户'}]}">角色</th>
+				<th data-options="{name:'type',width:80,align:'center',type:'select',items:datagrid_tree_department}">角色</th>
 				<th data-options="{name:'password',width:150,align:'center',hide:'true'}">密码</th>
                 <th data-options="{name:'date',align:'center',width:200,type:'date',pattern:'yyyy-MM-dd HH:mm:ss',render:function(value){return value?value.substr(0,19):value}}">注册日期</th>
             </tr>
