--- a/TEST/WebContent/UI/JSP/role/role.html
+++ b/TEST/WebContent/UI/JSP/role/role.html
@@ -10,10 +10,12 @@
         delUrl: 'deleteRole.action',
         paging: {pageSize:50, pageCurrent:1},
         linenumberAll: true,
-        hScrollbar: true
+        hScrollbar: true,
+        addLocation:'last'
     }">
         <thead>
             <tr>
+                <th data-options="{name:'id',align:'center',hide:'true'}"></th>
                 <th data-options="{name:'level',align:'center',hide:'true'}"></th>
                 <th data-options="{name:'name',align:'center',width:200}">名称</th>
                 <th data-options="{name:'description',align:'left',width:400}">描述</th>
