--- a/TEST/WebContent/UI/JSP/role/jurisdiction.html
+++ b/TEST/WebContent/UI/JSP/role/jurisdiction.html
@@ -31,9 +31,9 @@ BJUI.ajax('doajax', {
     <fieldset>
         <legend style="font-weight:normal;">选择类别：</legend>
         <div style="margin:0; padding:1px 5px 5px;">
-             <select name="type" data-toggle="selectpicker" id="j_user_edit_type" data-rule="required" data-width="100%"  >
+             <select name="type" data-toggle="selectpicker" id="j_user_edit_type" data-rule="required" data-width="200"  >
                     <option value=""></option>   
-             </select>
+             </select>&nbsp;&nbsp;&nbsp;&nbsp;
              <div class="btn-group">
                 <button type="submit" class="btn-green" data-icon="search">查询</button>
             </div>
@@ -70,9 +70,8 @@ BJUI.ajax('doajax', {
     }">
         <thead>
             <tr>
+            	<th data-options="{name:'type', align:'left', width:200, edit:false}">用户类别</th>
                 <th data-options="{name:'name', align:'left', width:300, edit:false}">菜单名</th>
-                <th data-options="{name:'level', align:'left', width:100, edit:false,hide:'true'}"></th>
-                <th data-options="{name:'order', align:'left', width:100, edit:false,hide:'true'}"></th>
                 <th data-options="{name:'used', align:'center',width:70,type:'boolean',render:function(value){return value ? '√' : '×'}}">是否启用</th>
                 <th data-options="{render:datagrid_tree_operation}">操作列</th>
             </tr>
