--- a/TEST/WebContent/UI/login_timeout.html
+++ b/TEST/WebContent/UI/login_timeout.html
@@ -8,18 +8,19 @@ $('#j_login_captcha_img').click(function(){
 })
 
 function j_login_changecode(){
-    $('#j_login_captcha_img').attr('src', 'login/getCaptcha?t='+ new Date())
+    $('#j_login_captcha_img').attr('src', '/TEST/ValidationCode?'+Math.random())
 }
 
 function sys_login_submit() {
-    var key      = CryptoJS.enc.Base64.parse($('#j_login_password_key').val())
-    var iv       = CryptoJS.enc.Latin1.parse('0102030405060708')
-    var password = CryptoJS.AES.encrypt($('#j_login_password').val(), key, {iv:iv, mode:CryptoJS.mode.CBC, padding:CryptoJS.pad.Pkcs7 })
+	
+	var validatiion=$("#j_login_captcha").val();
+    if(validatiion!=$.cookie('validationcode')){
+    	BJUI.alertmsg('error', '验证码错误！');
+    	return false;
+    }
     
-    $('#j_login_password_hash').val(password)
+
     $('#j_login_form').submit()
-    
-    $('#j_login_captcha').val('')
     j_login_changecode()
 }
 
@@ -30,18 +31,16 @@ $('#j_login_captcha').bind('keyup', function(event) {
 })
 </script>
 <div class="bjui-pageContent">
-    <form action="login/ajaxlogin" data-toggle="validate" method="post" id="j_login_form" class="bjui-form col-1" data-close-current="true">
-        <input type="hidden" id="j_login_password_key" name="" value="${randomKey }">
-        <input type="hidden" id="j_login_password_hash" name="password">
+    <form action="login.action" data-toggle="validate" method="post" id="j_login_form" class="bjui-form col-1" data-close-current="true">
         <div class="row">
             <label class="form-label">登录账户</label>
             <div class="form-input required">
-                <input type="text" data-rule="required" id="j_login_username" name="username" value="${username }" placeholder="身份证号、职工号">
+                <input type="text" data-rule="required" id="j_login_username" name="name" value="" placeholder="账号">
             </div>
             <p>&nbsp;</p>
             <label class="form-label">登录密码</label>
             <div class="form-input required">
-                <input type="password" data-rule="required" id="j_login_password" name="" value="" placeholder="密码">
+                <input type="password" data-rule="required" id="j_login_password" name="password" value="" placeholder="密码">
             </div>
             <p>&nbsp;</p>
             <label class="form-label">验证码</label>
