增加事务注解

--- a/TEST/WebContent/UI/JSP/role/role.html
+++ b/TEST/WebContent/UI/JSP/role/role.html
@@ -11,6 +11,7 @@
         paging: {pageSize:50, pageCurrent:1},
         linenumberAll: true,
         hScrollbar: true,
+        inlineEditMult: false,
         addLocation:'last'
     }">
         <thead>
