--- a/TEST/WebContent/UI/JSP/editor/editor.html
+++ b/TEST/WebContent/UI/JSP/editor/editor.html
@@ -7,7 +7,7 @@
         height: '100%',
         gridTitle : '信息发布',
         showToolbar: true,
-        toolbarItem: 'add,save,edit',
+        toolbarItem: 'add,edit,del,|,refresh',
         dataUrl: 'getEditor.action',
         dataType: 'jsonp',
         editMode: {dialog:{width:'800',height:600,title:'编辑发布信息',mask:true}},
